--- a/resources/release/manifest.json
+++ b/resources/release/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "chromex-sample",
+  "name": "Gemini",
   "version": "0.1.0",
   "browser_action": {
     "default_title": "Show the popup",
