first try to load minibar on the content script failed

--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -40,10 +40,14 @@
   ],
   "background": {
     "page": "background.html",
-    "persistent": false
+    "persistent": true
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
+  ],
+  "web_accessible_resources": [
+    "minibar/*"
   ],
   "manifest_version": 2
 }
